--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <h1>Velkommen...</h1>
+    <img src="./img/bopcat.gif" alt="animated cat gif" width="350">
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
